bk_ida/gccida/c3/peephole2_2
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57778:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2bc = ( rtx)x1s[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57784:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( x3n = ( rtx)x2bc[1], ( unsigned __int16)*( _DWORD *)x3n == 54) 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57802:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temg = gen_peephole2_1276( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57819:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temf = gen_peephole2_1275( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57835:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temh = gen_peephole2_1280( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57851:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temi = gen_peephole2_1281( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57857:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temj = gen_peephole2_1282( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57883:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2z; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57884:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2ba = ( rtx)x1s[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57887:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = x2ba; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57889:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x2ba->fld[0].rtx, recog_data_0.operand[0]) ) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57891:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3p = (  struct rtx_def *)x2ba[1]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57894:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3p; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57906:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temk = gen_peephole2_1260( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57912:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2ba = ( rtx)x1s[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57926:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( v7 && ( recog_data_0.operand[1] = x3o, rtx_equal_p( *( rtx *)&x2ba[1], recog_data_0.operand[0])) ) 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57926:77: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( v7 && ( recog_data_0.operand[1] = x3o, rtx_equal_p( *( rtx *)&x2ba[1], recog_data_0.operand[0])) ) 
                                                                            ^~~~~~~~~~~~
                                                                            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57939:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
teml = gen_peephole2_1261( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/insn-recog.c:57961:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2z; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_2/src/obj/insn-recog.o] Error 1
